--- a/Resources/views/Sonata/list_action_publish.html.twig
+++ b/Resources/views/Sonata/list_action_publish.html.twig
@@ -1,1 +1,5 @@
-<a class="btn btn-sm label label-success" href="{{ admin.generateObjectUrl('publish', object) }}">publish</a>
+{% trans_default_domain 'MICommentsBundle' %}
+
+<a class="btn btn-sm label label-success" href="{{ admin.generateObjectUrl('publish', object) }}">
+    {% trans %}publish{% endtrans %}
+</a>
