--- a/Resources/views/Sonata/list_action_reject.html.twig
+++ b/Resources/views/Sonata/list_action_reject.html.twig
@@ -1,1 +1,5 @@
-<a class="btn btn-sm label label-danger" href="{{ admin.generateObjectUrl('reject', object) }}">reject</a>
+{% trans_default_domain 'MICommentsBundle' %}
+
+<a class="btn btn-sm label label-danger" href="{{ admin.generateObjectUrl('reject', object) }}">
+    {% trans %}reject{% endtrans %}
+</a>
